# akshare-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/akshare-mcp/: __main__.py  requirements.txt
src/akshare-mcp/cn/: __init__.py  api.py
src/akshare-mcp/hk/: __init__.py  api.py
src/akshare-mcp/us/: __init__.py  api.py
src/akshare_mcp/: __main__.py
src/akshare_mcp/cn/: api.py
src/akshare_mcp/us/: api.py
src/vearne_akshare_mcp/: __main__.py
src/vearne_akshare_mcp/cn/: __init__.py
src/vearne_akshare_mcp/data/: __init__.py  us_stock_akshare_codes.csv
src/vearne_akshare_mcp/hk/: api.py
src/vearne_akshare_mcp/us/: __init__.py  api.py
