[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "akshare-mcp"
version         = "0.0.1"
description     = ""
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "vearne", email = "asdwoshiaotian@gmail.com"}]
requires-python = ">=3.8"
dependencies    = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "akshare==1.17.19",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "Authlib==1.6.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.7.9",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cryptography==45.0.5",
    "cyclopts==3.22.2",
    "decorator==5.2.1",
    "dnspython==2.7.0",
    "docstring_parser==0.16",
    "docutils==0.21.2",
    "email_validator==2.2.0",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "fastmcp==2.10.5",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jsonpath==0.82.2",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "lxml==6.0.0",
    "markdown-it-py==3.0.0",
    "mcp==1.11.0",
    "mdurl==0.1.2",
    "mini-racer==0.12.4",
    "multidict==6.6.3",
    "nest-asyncio==1.6.0",
    "numpy==2.3.1",
    "openapi-pydantic==0.5.1",
    "openpyxl==3.1.5",
    "pandas==2.3.1",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "rich-rst==1.3.1",
    "rpds-py==0.26.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sse-starlette==2.4.1",
    "starlette==0.47.1",
    "tabulate==0.9.0",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "webencodings==0.5.1",
    "xlrd==2.0.2",
    "yarl==1.20.1",
]

[project.urls]
Homepage = "https://github.com/vearne/akshare-mcp"