[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name            = "akshare_mcp"
version         = "0.0.1"
description     = "An MCP server capable of retrieving A-share, Hong Kong stock, and U.S. stock data using AkShare."
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "vearne", email = "asdwoshiaotian@gmail.com"}]
requires-python = ">=3.8"
dependencies    = [
    "akshare==1.17.19",
    "fastmcp==2.10.5",
    "pydantic==2.11.7"
]

[project.urls]
Homepage = "https://github.com/vearne/akshare-mcp"
