[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vearne_akshare_mcp"]

[project]
name            = "vearne_akshare_mcp"
version         = "0.1.1"
description     = "An MCP server capable of retrieving A-share, Hong Kong stock, and U.S. stock data using AkShare."
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "vearne", email = "asdwoshiaotian@gmail.com"}]
requires-python = ">=3.8"
dependencies    = [
    "akshare==1.17.19",
    "fastmcp==2.10.5",
    "pydantic==2.11.7"
]

[project.scripts]
vearne_akshare_mcp = "vearne_akshare_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/vearne/akshare-mcp"



